apps/mqtt/httproute-z2m.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: z2m-frontend
  namespace: home
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Zigbee2MQTT"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "zigbee2mqtt.png"
    gethomepage.dev/description: "Zigbee bridge"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=z2m"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-z2m
  hostnames:
    - z2m.stevevaradi.me
  rules:
    - backendRefs:
        - name: z2m-zigbee2mqtt
          port: 8080
