apps/mqtt/ingress-z2m.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2m-frontend
  namespace: home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.1/24, 10.192.1.1/24"
spec:
  tls:
    - hosts:
        - z2m.stevevaradi.me
      secretName: z2m-tls
  rules:
    - host: z2m.stevevaradi.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: z2m-zigbee2mqtt
                port:
                  name: web
